--- a/falling.html
+++ b/falling.html
@@ -5,14 +5,18 @@
 		<style type="text/css">
 			body {
 				font-family:sans-serif;
-				background-color:white;
+				background-color:#060233;
 				margin:0;
 				padding:0;
 				overflow: hidden;
 				text-align:center;
 			}
 			canvas {
-				margin:auto;
+				top:0;
+				bottom:0;
+				padding:0;
+				margin:0px auto;
+				box-shadow:#030119 0 0 10px;
 			}
 		</style>
 	</head>
@@ -24,7 +28,11 @@
 
 			var start = Date.now();
 
-			var ballX = 0;
+			var baseX, ballX, ballY, ballXVelocity, ballYVelocity, ballXAcceleration, ballYAcceleration, baseY;
+			
+			var playing = false;
+
+			var bars = [];
 
 			//Mozilla's implementation fo multi-browser requestAnimationFrame
 			(function() {
@@ -33,26 +41,96 @@
 			})();
 
 			function update(time) {
-				var diff = time - start;
+				var diff = (time - start);
 
-				ballX = time % 10000 / 10000;
+				ballXVelocity += ballXAcceleration * diff / 1000;
+				ballX += ballXVelocity * diff / 1000;
+
+				ballX = Math.max(0, Math.min(300, ballX));
+
+				if (ballX <= 0 || ballX >= 300) ballXVelocity = 0;
 
 				draw();
-				requestAnimationFrame(update);
+
+				start = time;
+
+				if (playing) requestAnimationFrame(update);
 			}
 
 			function draw() {
 				//Clear the canvas
 				sizeCanvas();
 
-				ctx.fillStyle = "red";
-				ctx.fillRect(0,0, canvas.width, canvas.height);
-
 				ctx.fillStyle = "black";
-				ctx.fillRect(ballX * canvas.width,300,2,2);
+				ctx.fillRect(0,0, 320, 480);
+
+				drawBars();
+				drawBall();
+				drawScore();
+
+			}
+
+			function drawBars() {
+
+				var lineStyles = ["#0f0", "#0ff", "#ff0", "#f0f", "#f00", "#00f"];
+
+				ctx.save();
+				ctx.translate(0, 240 - baseY);
+				ctx.lineWidth = 2;
+				ctx.strokeStyle = "rgb(0,255,0)";
+				ctx.shadowColor = ctx.strokeStyle;
+				ctx.shadowBlur = 5;
+				ctx.lineJoin = ctx.lineCap = "round";
+				ctx.beginPath();
+				for (var bar = Math.max(0, Math.floor(ballY / 30) - 9); bar < Math.min(5000, Math.floor(baseY / 30) + 9); bar++) {
+					if (lineStyles[Math.floor(bar / 100) % lineStyles.length] != ctx.strokeStyle) {
+						ctx.stroke();
+						ctx.strokeStyle = ctx.shadowColor = lineStyles[Math.floor(bar / 100) % lineStyles.length];
+						ctx.beginPath();
+					}
+					ctx.moveTo(0, bar * 30);
+					ctx.lineTo(bars[bar], bar * 30);
+					ctx.lineTo(bars[bar], bar * 30 + 5);
+					ctx.lineTo(0, bar * 30 + 5);
+					ctx.moveTo(320, bar * 30);
+					ctx.lineTo(bars[bar] + 40, bar * 30);
+					ctx.lineTo(bars[bar] + 40, bar * 30 + 5);
+					ctx.lineTo(320, bar * 30 + 5);
+				}
+				ctx.stroke();
+				ctx.restore();
+			}
+
+			function drawBall() {
+				ctx.save();
+				ctx.translate(ballX + 10, 230 - baseY);
+				ctx.rotate((ballX / 20 * Math.PI));
+				ctx.translate(-10, -10);
+				ctx.strokeStyle = "red";
+				ctx.lineWidth = 2;
+				ctx.shadowColor = "red";
+				ctx.shadowBlur = 2;
+				ctx.beginPath();
+				ctx.arc(10, 10, 10, 0, Math.PI * 2, false);
+				ctx.moveTo(10, 10);
+				ctx.arc(5, 10, 5, 0, Math.PI, false);
+				ctx.moveTo(20, 10);
+				ctx.arc(15, 10, 5, 0, Math.PI, true);
+				ctx.stroke();
+				ctx.restore();	
+			}
+
+			function drawScore() {
+				ctx.shadowColor = "white";
+				ctx.shadowBlur = 5;
+				ctx.font = "20px sans-serif";
+				ctx.textBaseline = "top";
+				ctx.fillStyle = "white";
+				ctx.fillText(Math.floor(Math.max(0,ballY)).toString(), 10, 10);
 			}
 
 			function sizeCanvas() {
+				//This will appropriately position the canvas within the bounds of the screen
 				var winWidth = window.innerWidth;
 				var winHeight = window.innerHeight;
 				if (winWidth / winHeight > 2.0 / 3.0) {
@@ -63,11 +141,52 @@
 					canvas.width = winWidth;
 					canvas.height = 3.0 / 2.0 * winWidth;
 				}
+
+				//By scaling the canvas you can use a viewport of 320,480 without having to modify drawing code
+				ctx.scale(canvas.width / 320.0, canvas.height / 480.0);
 			}
 
-			//Begin the animation routine
-			requestAnimationFrame(update);
+			function onKeyDown(event) {
+				if (event.which == 37 || event.keyCode == 37) ballXAcceleration = -20;
+				else if (event.which == 39 || event.keyCode == 39) ballXAcceleration = 20;
+				console.log("Key down");
+			}
 
+			function onKeyUp(event) {
+				ballXAcceleration = 0;
+			}
+
+			function onDeviceMotion(event) {
+				ballXAcceleration = event.acclerationIncludingGravity.x;
+			}
+
+			function create() {
+				window.onkeyup = onKeyUp;
+				window.onkeydown = onKeyDown;
+				if (window.DeviceMotionEvent != undefined) {
+					window.ondevicemotion = onDeviceMotion;
+				}
+				//Begin the animation routine
+				baseY = 0;
+				baseX = 0;
+				ballX = 0;
+				ballY = -100;
+				ballXVelocity = 0;
+				ballYVelocity = 0;
+				ballXAcceleration  = 0;
+				ballYAcceleration = 0.25;
+
+				playing = true;
+
+				for (var x = 0; x < 5000; x++) {
+					bars[x] = 30 + Math.random() * 260;
+				}
+
+				requestAnimationFrame(update)
+			}
+
+			window.onload = create;
+			
 		</script>
 	</body>
 </html>
